base exercise completed

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                         <tr>
 
                             <th>Titolo</th>
-                            <th class="d-none d-sm-none d-md-flex d-lg-flex">Data prestito</th>
+
+                            <th class="d-none d-sm-none d-md-block d-lg-block">Data prestito</th>
+
                             <th>Stato</th>
                             <th>Azioni</th>
 
@@ -112,7 +114,7 @@
 
                             <td class="small pb-3">I pilastri della terra</td>
 
-                            <td>-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
                             <td>
                                 <span class="badge bg-success">Disponibile</span>
@@ -140,7 +142,7 @@
 
                             <td class="small pb-3">I promessi sposi</td>
 
-                            <td>-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
                             <td>
                                 <span class="badge bg-success">Disponibile</span>
@@ -168,7 +170,7 @@
 
                             <td class="small pb-3">Il signore degli anelli</td>
 
-                            <td>18/10/2023</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">18/10/2023</td>
 
                             <td>
                                 <span class="badge bg-warning">In prestito</span>
@@ -196,7 +198,7 @@
 
                             <td class="small pb-3">Harry Potter e la pietra filosofale</td>
 
-                            <td>-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
                             <td>
                                 <span class="badge bg-success">Disponibile</span>
@@ -224,7 +226,7 @@
 
                             <td class="small pb-3">Il codice Da Vinci</td>
 
-                            <td>-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
                             <td>
                                 <span class="badge bg-danger">Non disponibile</span>
@@ -251,7 +253,7 @@
 
                             <td class="small pb-3">Shining</td>
 
-                            <td>-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
                             <td>
                                 <span class="badge bg-success">Disponibile</span>
@@ -278,7 +280,7 @@
 
                             <td class="small pb-3">La divina commedia</td>
 
-                            <td>21/09/2023</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">21/09/2023</td>
 
                             <td>
                                 <span class="badge bg-warning">In prestito</span>
@@ -306,7 +308,7 @@
 
                             <td class="small pb-3">Il trono di spade</td>
 
-                            <td>-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
                             <td>
                                 <span class="badge bg-success">Disponibile</span>
@@ -334,7 +336,7 @@
 
                             <td class="small pb-3">Il mondo di Sofia</td>
 
-                            <td>-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
                             <td>
                                 <span class="badge bg-danger">Non disponibile</span>
@@ -362,7 +364,7 @@
 
                             <td class="small pb-3">Le cronache di Narnia: il leone, la strega e l'armadio</td>
 
-                            <td>25/07/2023</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">25/07/2023</td>
 
                             <td>
                                 <span class="badge bg-warning">In prestito</span>
@@ -390,7 +392,7 @@
 
                             <td class="small pb-3">Il piccolo principe</td>
 
-                            <td>-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
                             <td>
                                 <span class="badge bg-success">Disponibile</span>
@@ -418,7 +420,7 @@
 
                             <td class="small pb-3">La storia infinita</td>
 
-                            <td>-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
                             <td>
                                 <span class="badge bg-success">Disponibile</span>
