build: new file html for form

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                             <th>Titolo</th>
 
-                            <th class="d-none d-sm-none d-md-block d-lg-block">Data prestito</th>
+                            <th class="d-none d-sm-none d-md-block d-lg-block++">Data prestito</th>
 
                             <th>Stato</th>
                             <th>Azioni</th>
@@ -110,11 +110,11 @@
 
                     <tbody>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">I pilastri della terra</td>
+                            <td class="small">I pilastri della terra</td>
 
-                            <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
+                            <td class="d-none d-sm-none d-md-block d-lg-block ">-</td>
 
                             <td>
                                 <span class="badge bg-success">Disponibile</span>
@@ -138,9 +138,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">I promessi sposi</td>
+                            <td class="small">I promessi sposi</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
@@ -166,9 +166,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">Il signore degli anelli</td>
+                            <td class="small">Il signore degli anelli</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">18/10/2023</td>
 
@@ -194,9 +194,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">Harry Potter e la pietra filosofale</td>
+                            <td class="small">Harry Potter e la pietra filosofale</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
@@ -222,9 +222,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">Il codice Da Vinci</td>
+                            <td class="small">Il codice Da Vinci</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
@@ -249,9 +249,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">Shining</td>
+                            <td class="small">Shining</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
@@ -276,9 +276,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">La divina commedia</td>
+                            <td class="small">La divina commedia</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">21/09/2023</td>
 
@@ -304,9 +304,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">Il trono di spade</td>
+                            <td class="small">Il trono di spade</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
@@ -332,9 +332,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">Il mondo di Sofia</td>
+                            <td class="small">Il mondo di Sofia</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
@@ -360,9 +360,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                            <td class="small">Le cronache di Narnia: il leone, la strega e l'armadio</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">25/07/2023</td>
 
@@ -388,9 +388,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">Il piccolo principe</td>
+                            <td class="small">Il piccolo principe</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
@@ -416,9 +416,9 @@
 
                         </tr>
 
-                        <tr class="table-bg-light">
+                        <tr>
 
-                            <td class="small pb-3">La storia infinita</td>
+                            <td class="small">La storia infinita</td>
 
                             <td class="d-none d-sm-none d-md-block d-lg-block">-</td>
 
